fixed spacing in the nav bar

--- a/tutor/static/css/base.css
+++ b/tutor/static/css/base.css
@@ -91,6 +91,11 @@ h3 {
     color: white;
 }
 
+.menu-element {
+  padding-right: 0.45rem;
+}
+
+
 /*MOBILE STYLING */
 @media screen and (max-width: 840px) {
 .banner {
